--- a/package.json
+++ b/package.json
@@ -1,21 +1,30 @@
 {
-  "name": "meals-to-go",
+  "name": "restaurant-options",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web",
+    "lint": "eslint . --ext .js"
   },
   "dependencies": {
+    "@react-native-community/eslint-config": "^3.2.0",
     "expo": "~50.0.17",
     "expo-status-bar": "~1.11.1",
-    "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-native": "0.73.6",
+    "react-native-paper": "^5.12.3",
+    "styled-components": "^6.1.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "prettier": "^3.2.5"
   },
   "private": true
 }
