--- a/package.json
+++ b/package.json
@@ -10,14 +10,20 @@
     "lint": "eslint . --ext .js"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.2.3",
+    "@expo-google-fonts/lato": "^0.2.3",
+    "@expo-google-fonts/montserrat": "^0.2.3",
+    "@expo-google-fonts/oswald": "^0.2.3",
     "@react-native-community/eslint-config": "^3.2.0",
     "expo": "~50.0.17",
+    "expo-font": "~11.10.3",
     "expo-status-bar": "~1.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.73.6",
     "react-native-paper": "^5.12.3",
-    "styled-components": "^6.1.9"
+    "styled-components": "^6.1.9",
+    "react-native-svg": "14.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
