--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@expo-google-fonts/montserrat": "^0.2.3",
     "@expo-google-fonts/oswald": "^0.2.3",
     "@react-native-community/eslint-config": "^3.2.0",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
     "expo": "~50.0.17",
     "expo-font": "~11.10.3",
     "expo-status-bar": "~1.11.1",
@@ -22,8 +24,10 @@
     "react-dom": "^18.2.0",
     "react-native": "0.73.6",
     "react-native-paper": "^5.12.3",
-    "styled-components": "^6.1.9",
-    "react-native-svg": "14.1.0"
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-svg": "14.1.0",
+    "styled-components": "^6.1.9"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
