Init location data context

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-native-community/eslint-config": "^3.2.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
+    "camelize": "^1.0.1",
     "expo": "~50.0.17",
     "expo-font": "~11.10.3",
     "expo-status-bar": "~1.11.1",
