--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
-    "styled-components": "^6.1.9"
+    "styled-components": "^6.1.9",
+    "expo-dev-client": "~3.3.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
