--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@react-native-community/eslint-config": "^3.2.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.3.29",
     "camelize": "^1.0.1",
     "expo": "~50.0.17",
+    "expo-dev-client": "~3.3.11",
     "expo-font": "~11.10.3",
     "expo-status-bar": "~1.11.1",
     "react": "^18.2.0",
@@ -28,8 +30,7 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
-    "styled-components": "^6.1.9",
-    "expo-dev-client": "~3.3.11"
+    "styled-components": "^6.1.9"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
